--- a/Mamocloud Demo Website.html
+++ b/Mamocloud Demo Website.html
@@ -12,20 +12,20 @@
     <title>Mamocloud Demo</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link rel="stylesheet" href="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/vendor/simple-line-icons/css/simple-line-icons.css">
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/device-mockups/device-mockups.min.css">
+    <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/css/new-age.min.css" rel="stylesheet">
+    <link href="css/new-age.min.css" rel="stylesheet">
 
   </head>
 
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-md-8 mx-auto">
             <h2 class="section-heading">Results are ready!</h2>
-              <img src="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/img/Mamocloud results.png" class="img-fluid" alt="">
+              <img src="img/Mamocloud results.png" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/img/demo-screen-1.jpg" class="img-fluid" alt="">
+                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -166,8 +166,8 @@
             <h2 class="section-heading">Let our AI powered Mamocloud do the work</h2>
             <p>Our app is available on any mobile device! Download now to get started!</p>
             <div class="badges">
-              <a class="badge-link" href="#"><img src="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/img/google-play-badge.svg" alt=""></a>
-              <a class="badge-link" href="#"><img src="file:///C|/Users/Alec/Desktop/Dreamweaver Works/Mamosound demo website/img/app-store-badge.svg" alt=""></a>
+              <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+              <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
             </div>
           </div>
         </div>
